style.css
/* Animate elements, hover etc. 
clicked link style
visited link style
active link style
vertical line separators between menu items
animatable items
left side border, see css border page
smooth-scrollbar or SimpleScrollbar

active page on dropdown
SVG Animations

Overlay scrollbars website button animation
Edit button animations for all parts, and animate the gradient for landing page

Overscroll animation??? Make body oversized and animate moving back with position sensor

Brown? Use SA color palette?

Make footer expand out, after a slight delay at the bottom of the scroll

SEO Strategy, Learn basic SEO optimization
How to change icon on chrome tab

https://www.today.com/style/here-s-why-men-s-women-s-shirts-button-opposite-t100380
sunscribe animation

Change highlight color

LinkedIn Connect with me, 

Add a floating home.logo overlay button in navbar, how to incorporate in home tab?
Return to top button?

Make nav bar un-sticky when the footer comes into view

Animated background in footer and header?
Material Design drop shadow for stuff

Dark theme for website, add a switcher button, also sniffer for if it is set for dark theme
Multilayer design with depth, soaring background

SVG drop shadow

Scroll left and right within webpage to switch pages

Change cursor based contextually
*/

html, body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  background: #fff;
  position: relative;
}

body {
	overflow-x: hidden;
}

.placeholder, main {
	position: sticky;
	top: -90vh;
	overflow: hidden;
	height: 100vh;
	width: 100vw;
	background-color: green;
	z-index: 100;
}


/* Navigation Menu ------------------------------------------------------------------- */
nav {
	position: sticky;
	top: 10vh;
	display: grid;
	background-color: white;
	font-size: 1em;
	z-index: 2;
	height: 3vh;
	width: 100vw;
}

.navsection {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(0px, 1fr));
	background-color: #333333;
}

#id {
	background-color: inherit;
}

#contact {
	white-space: nowrap;
}

.navbutton {
	text-align: center;
	padding: .5em;
	color: orange;
	background-color: #333333;
	/* background-color: inherit; */
	text-decoration: none;
	display: inline-block;
	position: relative;
	/* border-radius: 1000px; */
}

/* #navcontact {
	background-color: inherit;
	outline: 3px solid #333333;
	border-radius: 1000px;
}
 */
.navbutton:hover {
	color: black;
	background-color: lightgray;
}

.navbutton:active {
	color: black;
	background-color: gray;
}

.navblank {
	text-align: center;
	padding: 0.5em;
	color: gray;
	background-color: gray;
	pointer-events: none;
	/* background-color: inherit; */
	text-decoration: none;
}
/* ----------------------------------------------------------------------------------------------- */
/* Main Body ------------------------------------------------------------------------------------- */
main {
	position: sticky;
	display: grid;
	background-color: white;
	grid-template-rows: 4em 2em auto;
	grid-template-columns: 10% auto 10%;
	grid-row-gap: 1em;
	align-items: center;
	width: 100vw;
	height: 87vh;
	z-index: 1;
	top: 13vh;
}

.bio {
	grid-column: 2;
	grid-row: 2;
	font-size: 2em;
	text-align: center;
	width: 100%;
}

.paragraph{
	grid-column: 2;
	grid-row: 3;
	height: 300px;
	align-self: start;
	text-align: justify;
	width: 100%;
}
/* ----------------------------------------------------------------------------------- */

/* Footer --------------------------------------------------------------------------- */
footer {
	display: grid;
	width: 100vw;
	height: auto;
	position: relative;
	bottom: 0;
	color: white;
	background-color: black;
	grid-template-rows: auto auto auto;
	box-shadow: 0 -5px 0 orange;
	z-index: 2;
}


/* Footer Contact -------------------------------------------------------------------- */
.footercontact{
	display: grid;
	height: auto;
	width: 100%;
	background-color: gray;
	text-align: center;
	align-items: center;
	justify-items: center;
	grid-template-columns: 1fr;
	font-size: 2em;
}

#contactbutton {
	display: grid;
	text-align: center;
	align-items: justify;
	grid-template-columns: 1fr 1fr;
}

#button {
	display: grid;
	justify-self: center;
	align-self: center;
}

.container {
	display: grid;
	justify-self: center;
	grid-template-columns: 1fr 1fr;
	grid-gap: 25px;
}

.icon1 { /* Make custom email icon, circle with material design, also style linked in with material design */
	display: grid;
	height: 50px;
	width: 50px;
	background-image: url("email.png");
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
}

.icon2 { /* Make email dialogue box */
	display: grid;
	height: 50px;
	width: 50px;
	background-image: url("email.png");
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
}

img {
	max-height: 100%;
	max-width: 100%;
	height: auto;
	width: auto;
	justify-self: center;
	align-self: center;
}
/* ------------------------------------------------------------------------------------------ */

/* Website Links ---------------------------------------------------------------------------- */

.footerlinks{
	display: grid;
	background-color: black;
	grid-template-columns: 1fr 1fr 1fr;
	height: auto;
	width: 100vw;
	padding: 2.5vh 0 2.5vh 0;
}

.links {
	display: grid;
	height: auto;
	width: 20vw;
	font-size: 16px;
	justify-self: center;
}

.pages {
	align-self: center;
}

.pages:hover {
	color: orange;
}

hr {
    border: 1px solid gray;
    width: 100%;
}

.heading {
	font-size: 24px;
	padding: 10px 0 10px 0;
	text-align: left;
	font-weight: bold; /* Bold text on hover? */
}

/* ---------------------------------------------------------------------------------- */

.copyright {
	display: grid;
	justify-self: center;
	align-self: right;
	width: 100vw;
	text-align: center;
	color: gray;
	background-color: #333333;
	/* padding: 0 100px 0 100px; */
}

/* Centering Items ----------------------------------------------------------------- */
/* 	  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%); */
 /* --------------------------------------------------------------------------------- */
  
  
  
/* Dropdown Menu ---------------------------------------------------------------------*/
  .dropbtn {
/*   background-color: #4CAF50;
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none; */
  
  	text-align: center;
	padding: .5em;
	color: orange;
	background-color: inherit;
	/* background-color: inherit; */
	text-decoration: none;
}

.dropdown-content {
  display: none;
  position: absolute;
  left: 0%;
  top: 100%;
  background-color: #f1f1f1;
  width: 100%;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {background-color: #ddd;}

.navbutton:hover .dropdown-content {display: block;}

/* -----------------------------------------------------------------------------------*/

